# editorconfig-core-rust

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile
.github/workflows/: ci.yaml  commitlint.yaml
src/: main.rs
