[package]
name = "editorconfig-core-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
fnmatch-sys = "1.0.0"
path-clean = "1.0.1"
rust-ini = "0.18.0"
